<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculateCircleActivity">

    <ImageView
        android:id="@+id/triangleImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:contentDescription="@string/triangle_image"
        android:cropToPadding="false"
        app:srcCompat="@drawable/kolo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/r" />

        <EditText
            android:id="@+id/rEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/circleCalcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oblicz"
            app:backgroundTint="@color/c" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/circleResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_of_circle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/backAndAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dodaj"
            app:backgroundTint="@color/c" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rezygnacja"
            app:backgroundTint="@color/c" />
    </LinearLayout>

</LinearLayout>