<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculateTriangleActivity">

    <ImageView
        android:id="@+id/triangleImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:background="@android:color/background_light"
        android:contentDescription="@string/triangle_image"
        android:cropToPadding="false"
        android:padding="5dp"
        app:srcCompat="@drawable/trojkat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/triangleInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/obliczanie_pola_tr_jk_ta_n_wpisz_d_ugo_ci_bok_w_tr_jk_ta"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/a"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/a" />

            <EditText
                android:id="@+id/aEditText"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/b"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/b" />

            <EditText
                android:id="@+id/bEditText"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/c"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/c" />

            <EditText
                android:id="@+id/cEditText"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/triangleCalcButton"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oblicz" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/triangleAnglesInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lub_wpisz_dwa_z_trzech_k_t_w_aby_policzy_miar_trzeciego"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alfa"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/alfa" />

            <EditText
                android:id="@+id/alfaEditText"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/beta"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/beta" />

            <EditText
                android:id="@+id/betaEditText"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/gamma"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/gamma" />

            <TextView
                android:id="@+id/gammaResult"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/triangleAnglesCalcButton"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/oblicz" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/triangleResultTextView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/area_of_triangle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/backAndAddButton"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/dodaj" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/rezygnacja" />
    </LinearLayout>

</LinearLayout>