<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculateRectangleActivity">

    <ImageView
        android:id="@+id/triangleImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:adjustViewBounds="false"
        android:contentDescription="@string/triangle_image"
        android:cropToPadding="false"
        app:srcCompat="@drawable/rectangle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="a=" />

        <EditText
            android:id="@+id/aEditText"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="b=" />

        <EditText
            android:id="@+id/bEditText"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/rectangleCalcButton"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oblicz" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rectangleResultTextView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/area_of_rectangle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/backAndAddButton"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dodaj" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickBackButton"
            android:text="@string/rezygnacja" />
    </LinearLayout>

</LinearLayout>